--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "bing-api",
+  "name": "bing-search-result-api",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -9,9 +9,9 @@
   },
   "devDependencies": {},
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC"
+  "keywords": ['bing', 'bing-scraper'],
+  "author": "nekozu",
+  "license": "MIT"
 }
